--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,10 +2,14 @@
 
 /* Vendors */
 
+@import url(/src/css/vendors/normalize.css);
 /* Utils */
 
 /* Base */
 
 /* Layout */
+
+@import url(/src/css/layout/footer.css);
+@import url(/src/css/layout/header.css);
 
 /* Components */
