--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,10 +7,12 @@
 /* Utils */
 
 /* Base */
-
+@import "/src/css/base/main.css";
 /* Layout */
 
 @import "/src/css/layout/footer.css";
 @import "/src/css/layout/header.css";
 
 /* Components */
+
+@import "/src/css/components/menu.css";
