--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,7 +1,7 @@
 .footer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     padding: 100px;
     background-color: #F17007;
     color: #fff;
@@ -12,12 +12,13 @@
     justify-content: flex-end;
     left: 0;
     position: absolute;
+    align-items: flex-start;
   }
   
   .footer__links {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
   }
   
   .footer__links p {
@@ -35,12 +36,16 @@
   
   .footer__social {
     display: flex; 
-    justify-content: flex-end; 
+    align-self: flex-end;  
+    justify-content: flex-end;
+    right: 0;
+    position: absolute;
     gap: 5px; 
+    
   }
   
   .footer__social img {
-    margin: 5px; 
+    margin: 0 5px; 
     height: 30px;
   }
   
