--- a/src/css/base/programme.css
+++ b/src/css/base/programme.css
@@ -31,6 +31,9 @@
     justify-content: center;
    }
 
+   .selection {
+    background-color: #F4DEC5;
+   }
 
 .selection__titre{
     font-family: mulish;
