--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -32,3 +32,14 @@
   .header__nav[aria-expanded="true"] .header__menu-list {
     display: block;
   }
+
+  .header__menu-btn {
+    height: 30px;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: 15;
+    margin :15px;
+
+  }
+ 
