--- a/src/css/base/billetterie.css
+++ b/src/css/base/billetterie.css
@@ -24,6 +24,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .program__child-adulte {
@@ -40,7 +41,7 @@
     width: 350px; 
     height: 250px; 
     object-fit: cover;
-    margin: 20px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
 }
