--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -60,21 +60,12 @@ body {
   
 }
 
+.header__menu-btn {
+  height: 30px;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 15;
+  margin :15px;
 
-@media (max-width: 768px) {
-  .header__nav {
-    display: none; 
-  }
-
-  .header__menu-btn {
-    display: block;
-  }
-
-  .header__menu-list {
-    flex-direction: column;
-  }
-
-  .header__menu-item {
-    margin: 10px 0;
-  }
 }
