--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,7 @@
 @import "/src/css/base/invite.css";
 @import "/src/css/base/programme.css";
 @import "/src/css/base/restauration.css";
+@import "/src/css/base/contact.css";
 /* Layout */
 
 @import "/src/css/layout/footer.css";
