--- a/src/css/base/billetterie.css
+++ b/src/css/base/billetterie.css
@@ -25,7 +25,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 50px;
+    margin-left: 45%;
+    
 }
 
 .program__child-adulte {
@@ -73,6 +74,7 @@
     cursor: pointer; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     transition: background-color 0.3s ease; 
+    margin-left: 35%;
 }
 
 .program__button:hover {
