--- a/src/css/base/film.css
+++ b/src/css/base/film.css
@@ -23,6 +23,7 @@
 .film__trailer-button{
     margin: 20px;
     right: 0;
+    margin-left: 60%;
 }
 .film-details {
     background-color: #F4DEC5;
@@ -67,6 +68,7 @@
     margin: 20px;
     display: flex;
     justify-content: center;
+    margin-left: 20%;
 }
 .directors__bio {
     font-family: STIX Two Text;
