--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -145,6 +145,7 @@ body {
     margin: 20px;
     display: flex;
     justify-content: center;
+    margin-left: 20%;
   }
 
   .films {
@@ -216,3 +217,4 @@ body {
     width: 150px;
     height: auto;
 }
+
