--- a/src/css/base/billetterie.css
+++ b/src/css/base/billetterie.css
@@ -34,18 +34,48 @@
 }
 
 .program__title {
-    font-family: STIX Two Text;
-    size: 18px;
-    margin: 20px;
+    font-family: 'STIX Two Text', serif;
+    font-size: 24px; /* Ajustez la taille de la police selon vos besoins */
+    margin: 20px 0;
+    text-align: center; /* Centrer le titre */
 }
 
 .program__image {
-    width: 350px; 
-    height: 250px; 
+    width: 100%; 
+    max-width: 350px; 
+    height: auto; 
     object-fit: cover;
     margin: 0 auto;
+    display: block; 
+}
+
+.card {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    max-width: 350px;
+    margin: 20px auto;
+    text-align: center;
+}
+
+.program__image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.card__content {
+    padding: 20px;
+}
+
+.__title {
+    font-family: 'STIX Two Text', serif;
+    font-size: 24px;
+    margin: 20px 0;
 }
 
 .program__date {
