--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,4 +1,29 @@
 .footer {
+  background-color: orange;
+}
+
+.footer__logo {
+  margin: 20px;
+}
+
+.footer__links {
+  color: white;
+  text-align: right;
+  margin-right: 20px;
+  font-family: mulish;
+  text-transform:uppercase;
+  size: 13px;
+}
+
+.footer__align {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 20px;
+}
+
+
+/*.footer {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -48,7 +73,7 @@
     height: 30px;
   }
   
-  @media (max-width: 768px) {
+  /*@media (max-width: 768px) {
     .footer {
       flex-direction: column;
       align-items: center;
@@ -57,4 +82,5 @@
     .footer__image {
       margin: 20px 0;
     }
+      */
   }
