--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: orange;
+  background-color: #F17007;
 }
 
 .footer__logo {
@@ -83,4 +83,3 @@
       margin: 20px 0;
     }
       */
-  }
