--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,7 @@
 @import "/src/css/base/programme.css";
 @import "/src/css/base/restauration.css";
 @import "/src/css/base/contact.css";
+@import "/src/css/base/carrousel.css";
 /* Layout */
 
 @import "/src/css/layout/footer.css";
