--- a/src/css/base/carrousel.css
+++ b/src/css/base/carrousel.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 80%;
     margin: 50px auto;
-    overflow: hidden; /* Cache les cartes en dehors de la vue */
+    overflow: hidden; 
     border: none;
     border-radius: 10px;
     display: flex;
@@ -10,14 +10,30 @@
 
 .carousel__wrapper {
     display: flex;
-    transition: transform 0.5s ease; /* Animation de défilement */
+    transition: transform 0.5s ease; 
     gap: 20px;
 }
 
 .carousel__item {
-    min-width: 300px; /* Largeur minimale d'une carte */
+    min-width: 300px; 
     height: auto;
-    background-color: #3D415D;
+    background-color: #83889D;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.carousel__item_enfant {
+    min-width: 250px; 
+    height: auto;
+    background-color: #83889D;
     color: white;
     display: flex;
     flex-direction: column;
@@ -34,7 +50,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #3D415D;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -42,10 +58,22 @@
     z-index: 10;
 }
 
+.carousel__btn--prev_enfant {
+    left: 10px;
+    margin-top: 500px;
+}
+
+.carousel__btn--next_enfant {
+    right: 10px;
+    margin-top: 500px;
+}
+
 .carousel__btn--prev {
     left: 10px;
+    margin-top: 170px;
 }
 
 .carousel__btn--next {
     right: 10px;
+    margin-top: 170px;
 }
