--- a/src/css/base/film.css
+++ b/src/css/base/film.css
@@ -13,6 +13,7 @@
     margin: 20px;
     display: flex;
     justify-content: center;
+    margin-left: 20%;
 }
 .film__subtitle {
     font-family: mulish;
