--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -7,16 +7,31 @@ body {
 }
 
 .header {
+  position: fixed; 
+  top: 0; 
+  left: 0;
+  width: 100%;
+  z-index: 1000; 
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
   background-color: #F17007;
   color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .header__logo img {
   height: 40px;
+}
+
+.header__menu-btn {
+  height: 15px;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 15px;
+  margin-right: 70px;
 }
 
 .header__nav {
@@ -53,19 +68,15 @@ body {
 
 .header__title {
   text-align: center; 
-  font-size: 36px;
-  margin: auto;
+  font-size: 28px;
+  margin: 0; 
   font-family: Creepster;
+  position: absolute; 
+  left: 50%; 
+  transform: translateX(-50%);
+  top: 50%; 
+  transform: translate(-50%, -50%);
   
   
 }
 
-.header__menu-btn {
-  height: 30px;
-  cursor: pointer;
-  position: absolute;
-  right: 0;
-  top: 15;
-  margin :15px;
-
-}
